k8s/apps/development/attic/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attic
  namespace: attic
  labels:
    app.kubernetes.io/name: attic
    app.kubernetes.io/instance: attic
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: attic
      app.kubernetes.io/instance: attic
  template:
    metadata:
      labels:
        app.kubernetes.io/name: attic
        app.kubernetes.io/instance: attic
    spec:
      containers:
        - name: attic
          image: forgejo.emnt.dev/public/attic-server:latest
          args: [-f, /etc/attic/config.toml]
          volumeMounts:
            - name: config
              mountPath: /etc/attic
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 1Gi
      volumes:
        - name: config
          configMap:
            name: attic-config
