k8s/apps/development/attic/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: attic
  namespace: attic
  labels:
    app.kubernetes.io/name: attic
    app.kubernetes.io/instance: attic
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: attic
    app.kubernetes.io/instance: attic
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
