k8s/apps/development/attic/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attic
  namespace: attic
  labels:
    app.kubernetes.io/component: attic
    app.kubernetes.io/instance: attic
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: ingress-internal-traefik
  rules:
    - host: attic.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: attic
                port:
                  name: http
